kubectl/k8s2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: k8s2
  name: k8s2
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: k8s2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)

      labels:
        io.kompose.service: k8s2
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env
          image: hprinces2/k8s-test-image:v2
          name: k8s2
          ports:
            - containerPort: 3000
            - containerPort: 9229
          resources: {}
          workingDir: /app
      restartPolicy: Always
status: {}
