kubectl/k8s2-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: k8s2
  name: k8s2
spec:
  # type: LoadBalancer
  ports:
    - name: '3000'
      port: 3001
      targetPort: 3000
    - name: '9221'
      port: 9221
      targetPort: 9229
  selector:
    io.kompose.service: k8s2
status:
  loadBalancer: {}
