kubectl/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myserver.local.com
      http:
        paths:
          - backend:
              service:
                name: k8s
                port:
                  number: 3000
            path: /(/|$)(.*)
            pathType: Prefix
    - host: myserver.local.com
      http:
        paths:
          - backend:
              service:
                name: k8s2
                port:
                  number: 3001
            path: /test(/|$)(.*)
            pathType: Prefix
